# RAGenetics

./: .env.example  .gitignore  LICENSE (MIT)  README.md  pyproject.toml  requirements.txt
configs/: dp_small.yaml  dp_sparse.yaml  local.example.yaml
data/toy_reports/: report_001.txt  report_002.txt  report_003.txt  report_004.txt  report_005.txt  report_006.txt  report_007.txt  report_008.txt  report_009.txt  report_010.txt  report_011.txt  report_012.txt  report_013.txt  report_014.txt  report_015.txt  report_016.txt  report_017.txt  report_018.txt  report_019.txt  report_020.txt  report_021.txt  report_022.txt  report_023.txt  report_024.txt  report_025.txt
scripts/: build_vectorstore.py  evaluate_dp_budget.py  make_synthetic_reports.py  run_pipeline.py
src/ragenetics/: __init__.py
src/ragenetics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ragenetics/genetics/: __init__.py  hpo_map.py  rules_acmg_amp.py  variant_utils.py
src/ragenetics/llm/: __init__.py  base.py  local_openai.py
src/ragenetics/pipeline/: __init__.py  dp_rag.py  dp_sparse_rag.py
src/ragenetics/privacy/: __init__.py  accounting.py  mechanisms.py  sparse_vector.py  vote.py
src/ragenetics/retrieval/: __init__.py  chunking.py  rankers.py  vectorstore.py
src/ragenetics/utils/: hashing.py  io.py
tests/: test_mechanisms.py  test_pipeline.py  test_retrieval.py  test_sparse_vector.py  test_vote.py
